--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.2",
+    "@fontsource/fira-code": "^4.5.10",
     "gatsby": "^4.6.1",
-    "gatsby-plugin-styled-components": "^5.6.0",
+    "gatsby-plugin-sass": "^5.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.3.3"
+    "sass": "^1.54.5"
   }
 }
