--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sass": "^5.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "typewriter-effect": "^2.19.0"
   }
 }
