--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@fontsource/fira-code": "^4.5.10",
     "gatsby": "^4.6.1",
     "gatsby-plugin-sass": "^5.21.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-remark-images": "^6.24.0",
+    "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-transformer-csv": "^4.22.0",
+    "gatsby-transformer-remark": "^5.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "sass": "^1.54.5",
     "typewriter-effect": "^2.19.0"
   }
